# ModernCppStarter

./: .clang-format  .clang-tidy  .cmake-format  .dockerignore  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  GNUmakefile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  annotated_dup.js  classes.html  classgreeter_1_1_greeter-members.html  classgreeter_1_1_greeter.html  classgreeter_1_1_greeter.js  codecov.yaml  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_efc517448da1cf4216d09f3867bece28.html  docker-compose.yml  files.html  files_dup.js  functions.html  functions_func.html  gcovr.cfg  greeter_8cpp.html  greeter_8h.html  greeter_8h.js  greeter_8h_source.html  index.html  m-dark+documentation.compiled.css  menudata.js  (+15 more)
.github/: FUNDING.yml
.github/workflows/: dockcross.yml  docker-cd.yml  docker-ci.yml  docker.yml  documentation.yaml  install.yml  macos.yml  release.yml  standalone.yml  style.yml  test.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt  CMakePresets.json  package-lock.cmake
cmake/: CPM.cmake  Config.cmake.in  WarningsAsErrors.cmake  options.cmake  packaging.cmake  tools.cmake
docker/: Dockerfile
documentation/: CMakeLists.txt  Doxyfile  Doxyfile-mcss  about.dox  conf.py
documentation/pages/: about.dox
include/: greeter.h
include/greeter/: greeter.h
pvs_studio/: README.md  pvs-studio.pvsconfig  pvs_config.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  namespaces_0.js  searchdata.js
source/: greeter.cpp
standalone/: CMakeLists.txt  CMakePresets.json  Dockerfile  package-lock.cmake
standalone/source/: main.cpp
test/: CMakeLists.txt  CMakePresets.json  package-lock.cmake
test/source/: greeter.cpp
tools/: dockcross-cmake-builder.sh
